--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   <div class="container">
     <header>
       <h1>Pasifika Open Card Sorting Tool</h1>
-      <div id="welcomeBanner" class="muted" aria-live="polite"></div>
+      <div id="welcomeBanner" aria-live="polite"></div>
     </header>
 
     <!-- Auth -->
@@ -1270,3 +1270,4 @@
   </script>
 </body>
 </html>
+
